--- a/index.html
+++ b/index.html
@@ -8,14 +8,32 @@
     <title>Learning page</title>
 </head>
 <body>
-    <nav class="navebar">
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-
-        
+<section class="navbar">
+    <nav>
+        <div>
+            <div class="navContainer">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+            <div class="navContainerForSmallScreen">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+            <h2>Landing</h2>
+        </div>
+        <div>
+            <button type="button">Buy Now!</button>
+        </div>
+        <div class="navContainerForSm" onclick="menuToogle()">
+            <img src="./Image/menu-bar.png" alt="menu-bar" width="40" height="40">
+        </div>
     </nav>
+</section>
 </body>
 </html>
