--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <button type="button">Buy Now!</button>
         </div>
         <div class="navContainerForSm" onclick="menuToogle()">
-            <img src="./Image/menu-bar.png" alt="menu-bar" width="40" height="40">
+            <img src="./Image/menu-bar.png" alt="" width="40" height="40">
         </div>
     </nav>
 </section>
