All code are push in github

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                     <li><a href="#">Contact</a></li>
             </ul>
         </div>
-        <div>
+        <div class="navH">
             <h2>Landing</h2>
         </div>
-        <div>
+        <div class="navbtn">
             <button type="button">Buy Now!</button>
         </div>
         <div class="navContainerForSm" onclick="menuToogle()">
@@ -43,11 +43,11 @@
 <div class="heroSectionBtn">
     <button type="button">Purchase UI Kit</button>
     <button type="button">Learn More</button>
+</div></div> 
+
+<div class="img">
+<img src="./Image/Group.png" alt="">
 </div>
-
-</div> 
-<div></div>
-
 </section>
 
 <section class="1stSection">
