--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <h1>Introduce Your Product Quickly & Effectively</h1>
 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
 <div class="heroSectionBtn">
-    <button type="button">Purchase UI Kit</button>
+    <button type="button"  style="background-color: #111b47; color: white;">Purchase UI Kit</button>
     <button type="button">Learn More</button>
 </div></div> 
 
