--- a/index.html
+++ b/index.html
@@ -46,17 +46,39 @@
 </div></div> 
 
 <div class="img">
-<img src="./Image/Group.png" alt="">
+<img src="./Image/Group.png" alt="image">
+</div>
+</section>
+<!-----------***** FIRST SECTION *******------->
+<section class="fstSection">
+<div class="fstSectionContainer">
+<div class="">
+    <h1>Light, Fast & Powerful</h1>
+    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
+</div>
+<div class="fstSectionImg">
+    <img src="./Image/undraw_mention_6k5d.png" alt="image">
+</div>
 </div>
 </section>
 
-<section class="1stSection">
-<div class="1stSectionContainer">
-<div>
-    <h1>Light, Fast & Powerful</h1>
-    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
+<section class="sndSection">
+    <div class="sndSectionContainer">
+        <div class="sndSectionImg">
+            <img src="./Image/undraw_happy_news_hxmt.png" alt="image">
+        </div>
+        <div>
+            <h1>Light, Fast & Powerful</h1>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
+        </div>
+    </div>
+</section>
 
-</div>
+<section class="trdSection">
+<div class="trdSectionContainer">
+    <div class="trdSectionImg">
+        <img src="./Image/undraw_social_influencer_sgsv.png" alt="image">
+    </div>
 </div>
 </section>
 
