uplode all code in git

--- a/index.html
+++ b/index.html
@@ -99,19 +99,19 @@
  </div>
 </section>
 <!-----------***** FOOTER SECTION *******------->
-<section class="footer">
+<section class="footerSection">
 <footer>
- <div class="">
+ <div class="container-1">
     <p>©2023 Yourcompany</p>
     <h1>Landing</h1>
     <button type="button">Purchase now!</button>
  </div>
- <div class="">
-    <div class="">
+ <div class="container-2">
+    <div class="menu">
      <ul>
         <li><a href="#">Home</a></li>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
      </ul>
     </div>
     <div class="iconContainer">
