--- a/index.html
+++ b/index.html
@@ -98,6 +98,17 @@
      </div>
  </div>
 </section>
+<!-----------***** FIFTH SECTION *******------->
+<section class="fithSection">
+<div class="fithSectionContainer">
+    <h1>A Price To Suit Everyone</h1>
+    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus </p>
+    <h2>$40</h2>
+    <p>UI Design Kit</p>
+    <p>See, One price. Simple.</p>
+    <button type="button">Purchase Now</button>
+</div>
+</section>
 <!-----------***** FOOTER SECTION *******------->
 <section class="footerSection">
 <footer>
