All file are uplode in github

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Learning page</title>
 </head>
 <body>
+    <!-----------***** NAVBAR  *******------->
 <section class="navbar">
 <nav>
     <div class="navContainer">
@@ -36,7 +37,7 @@
     </div>
 </nav>
 </section>
-
+    <!-----------***** HERO SECTION *******------->
 <section class="heroSection">
 <div class="textContainer">
 <h1>Introduce Your Product Quickly & Effectively</h1>
@@ -50,7 +51,7 @@
 <img src="./Image/Group.png" alt="image">
 </div>
 </section>
-<!-----------***** FIRST SECTION *******------->
+    <!-----------***** FIRST SECTION *******------->
 <section class="fstSection">
 <div class="fstSectionContainer">
 <div class="">
@@ -62,7 +63,7 @@
 </div>
 </div>
 </section>
-<!-----------***** SECOND SECTION *******------->
+    <!-----------***** SECOND SECTION *******------->
 <section class="sndSection">
 <div class="sndSectionContainer">
     <div class="sndSectionImg">
@@ -74,7 +75,7 @@
     </div>
 </div>
 </section>
-<!-----------***** THIRD SECTION *******------->
+    <!-----------***** THIRD SECTION *******------->
 <section class="trdSection">
 <div class="trdSectionContainer">
  <div class="trdSectionImg">
@@ -86,7 +87,7 @@
  </div>
 </div>
 </section>
-<!-----------***** FORTH SECTION *******------->
+    <!-----------***** FORTH SECTION *******------->
 <section class="fthSection">
  <div class="fthSectionContainer">
     <div class="fthSectionImg">
@@ -98,18 +99,18 @@
      </div>
  </div>
 </section>
-<!-----------***** FIFTH SECTION *******------->
+    <!-----------***** FIFTH SECTION *******------->
 <section class="fithSection">
 <div class="fithSectionContainer">
     <h1>A Price To Suit Everyone</h1>
     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus </p>
     <h2>$40</h2>
     <p>UI Design Kit</p>
-    <p>See, One price. Simple.</p>
+    <p style="color: #5d6970;">See, One price. Simple.</p>
     <button type="button">Purchase Now</button>
 </div>
 </section>
-<!-----------***** FOOTER SECTION *******------->
+    <!-----------***** FOOTER SECTION *******------->
 <section class="footerSection">
 <footer>
  <div class="container-1">
