All code are uplode in github

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 </section>
     <!-----------***** HERO SECTION *******------->
 <section class="heroSection">
+<div class="heroSectionContainer">
 <div class="textContainer">
 <h1>Introduce Your Product Quickly & Effectively</h1>
 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
@@ -49,6 +50,7 @@
 
 <div class="img">
 <img src="./Image/Group.png" alt="image">
+</div>
 </div>
 </section>
     <!-----------***** FIRST SECTION *******------->
