--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <!-----------***** FIRST SECTION *******------->
     <section class="fstSection">
         <div class="fstSectionContainer">
-            <div class="">
+            <div class="textContainer">
                 <h1>Light, Fast & Powerful</h1>
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean
                     massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec
@@ -78,7 +78,7 @@
             <div class="sndSectionImg">
                 <img src="./Image/undraw_happy_news_hxmt.png" alt="image">
             </div>
-            <div>
+            <div class="textContainer">
                 <h1>Light, Fast & Powerful</h1>
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean
                     massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec
@@ -92,7 +92,7 @@
             <div class="trdSectionImg">
                 <img src="./Image/undraw_social_influencer_sgsv.png" alt="image">
             </div>
-            <div>
+            <div class="textContainer">
                 <h1>Light, Fast & Powerful</h1>
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean
                     massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec
@@ -106,7 +106,7 @@
             <div class="fthSectionImg">
                 <img src="./Image/undraw_mention_6k5d.png" alt="image">
             </div>
-            <div>
+            <div class="textContainer">
                 <h1>Light, Fast & Powerful</h1>
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean
                     massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec
